<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:orientation="vertical" android:layout_height="wrap_content">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/businessInfo" android:id="@+id/titleBusinessDetails"></TextView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:id="@+id/businessDetails"></TextView>
    </LinearLayout>    
    <LinearLayout android:id="@+id/linearLayout2" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/business_phone" android:id="@+id/titlePhone"></TextView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" android:id="@+id/phone"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/relativeLayout1">
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/ordernow" android:layout_alignParentLeft="true" android:text="@string/order_now"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/viewonmap" android:layout_alignParentTop="true" android:text="@string/show_on_map"></Button>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/callnow" android:layout_alignParentTop="true" android:text="@string/call_now"></Button>
    </LinearLayout>
</LinearLayout>
